--- a/index.html
+++ b/index.html
@@ -1,90 +1,125 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no,email=no">
+    <title>Title</title>
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="animate.css">
+    <style>
+        #box1{width:100%;height:843px;position:relative;cursor:pointer;overflow:hidden;}
+        #box1 .star1{width:100%; height:843px;overflow:hidden;}
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+        #box1 .footer1{width:100%; height:350px;position:absolute; left:0px;bottom:0px;}
+        #box1 #animate1{margin:10px auto;display:block;width:720px;height:50px; line-height:50px; font-size:50px;-webkit-box-reflect:below 10px -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.8));color:#fff;}
+        #box1 #animate2{width:100%; height:200px;position:absolute;left:0px; bottom:0px;}
+        #box1 #animate2 .earth{transform:rotate(0deg);animation:5s move linear infinite;display:block;width:150px; height:150px;margin:0 auto; -webkit-box-shadow:0px 0px 66px #fff;border-radius:50%;}
+        @-webkit-keyframes move{
+            0%{}
+            100%{transform:rotate(360deg);}
+        }
+        /*星星*/
+        #box1  .fireworm{width:100px; height:50px;border-radius:50%; background:#666;
+            text-align:center;position:absolute; left:50%; margin-left:-50px;bottom:0px; margin-bottom:50px;padding-top:50px;}
+        /*钟表*/
+        #box1 .clock{width:300px; height:300px; background:red;position:absolute; right:490px; top:270px; border-radius:50%;background:url('img/pan3.png') no-repeat; background-size:contain;transform:scale(0.4,0.4) rotate(0deg);opacity:0;filter:alpha(opacity:0);}
+        @-webkit-keyframes move1{
+            0%{opacity:0;filter:alpha(opacity:0);}
+            50%{opacity:0.5;filter:alpha(opacity:50);transform:scale(0.9,0.9) rotate(360deg);}
+            100%{opacity:1;filter:alpha(opacity:100);transform:scale(0.7,0.7) ;}
+        }
+        #box1 .clock:hover{animation:3s move1 ease forwards;}
+        #box1 .clock .h{width:12px; height:80px; background:#000; border-radius:50% 50% 0 0;position:absolute; left:50%; top:50%; margin:-80px 0 0 -6px;-webkit-box-shadow:0px 0px 20px #fff;opacity:0.6; filter:alpha(opacity:80);}
+        #box1 .clock .m{width:8px; height:100px; background:blue; border-radius:50% 50% 0 0; position:absolute; left:50%; top:50%; margin:-100px 0 0 -4px;-webkit-box-shadow:0px 0px 20px #fff;opacity:0.6; filter:alpha(opacity:60);}
+        #box1 .clock .s{width:6px; height:120px; background:#FF0000; border-radius:50% 50% 0 0; position:absolute; left:50%; top:50%; margin:-120px 0 0 -3px;-webkit-box-shadow:0px 0px 20px #fff;opacity:0.6; filter:alpha(opacity:60);}
+        #box1 .clock .c{width:20px; height:20px;-webkit-box-shadow:0px 0px 20px #fff;
+            position:absolute; left:50%; top:50%; margin:-10px 0 0 -10px;border-radius:50%;}
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
+
+    </style>
+    <script src="js/move.js"></script>
+    <script src="js/earths.js"></script>
+    <script>
+        function random(n,m){
+            return parseInt(Math.random()*(m-n)+n);
+        }
+    document.addEventListener('DOMContentLoaded',function(){
+        var oBox1=document.getElementById('box1');
+        var oAnimate1=document.getElementById('animate1');
+        var oEarth=document.querySelector('.earth');
+        var oFir=document.querySelector('.fireworm');
+        var oBox1W=oBox1.offsetWidth;
+        var oBox1H=oBox1.offsetHeight;
+        var n=6;
+        var N=0;
+        var timer=null;
+        var bOk=true;
+        oEarth.onclick=function(){
+            if (bOk = true) {
+				
+                for (var i = 0; i < n; i++) {
+                    var oImg = new Image();
+                    oImg.src = 'stars/star' + random(1, 16) + '.png';
+                    oFir.appendChild(oImg);
+                }
+                var iSpeedX = 6;
+                var iSpeedY = 9;
+                var aImg = oFir.children;
+                timer = setInterval(function () {
+                    aImg[N].style.position = 'absolute';
+                    aImg[N].style.transition = '5s all ease';
+                    aImg[N].style.webkitBoxShadow = '0px 0px 10px #fff';
+                    aImg[N].style.borderRadius = '50%';
+                    move(aImg[N], {"left": random(-oBox1W/2, oBox1W/2), "top": random((-oBox1H + 150), 10)});
+                    N++;
+                    if (N == (aImg.length - 1)) {
+                        clearInterval(timer)
+                    }
+                }, 16);
+                bOk = !bOk;
+            }
+        };
+        //时钟；
+        var oClock=document.querySelector('.clock');
+        var oH=oClock.children[0];
+        var oM=oClock.children[1];
+        var oS=oClock.children[2];
+        function clock(){
+            var oDate=new Date();
+            var h=oDate.getHours();
+            var m=oDate.getMinutes();
+            var s=oDate.getSeconds();
+            oH.style.transform='rotate('+(h%12*30+m/2)+'deg)';
+            oH.style.transformOrigin='center bottom';
+            oM.style.transform='rotate('+m*6+'deg)';
+            oM.style.transformOrigin='center bottom';
+            oS.style.transform='rotate('+s*6+'deg)';
+            oS.style.transformOrigin='center bottom';
+        }
+        clock();
+        setInterval(clock,1000);
+    },false);
     </script>
-    <title>Qiangjingyang.GitHub.io by qiangjingyang</title>
-  </head>
-
-  <body>
-    <a id="forkme_banner" href="https://github.com/qiangjingyang">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Qiangjingyang.GitHub.io</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/qiangjingyang">qiangjingyang</a> can be found on <a href="https://github.com/qiangjingyang">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+</head>
+<body>
+    <div id="box1">
+        <div class="fireworm"></div>
+        <img class="star1" src="img/month1.jpg" alt="">
+        <div class="footer1">
+            <i id="animate1" class="animated bounceInLeft jello">Welcome To My Personal Stand</i>
+            <div id="animate2">
+                <img class="earth" src="img/earth1.png" alt="">
+            </div>
+        </div>
+        <div class="clock">
+            <div class="h"></div>
+            <div class="m"></div>
+            <div class="s"></div>
+            <img class="c" src="img/clock.png"/>
+        </div>
     </div>
-
-    
-  </body>
+</body>
 </html>
